========================

For what's new in this release, see CHANGES.txt.

5.0.0 (unreleased)
------------------

- Plone's javascript is now developed as part of the Plone mockup
  (http://github.com/plone/mockup) and is included as a compiled
  bundle.
  [davisagli]

- Removed portal_interface tool (PLIP #13770)
  [ale-rt]

- Removed kss_field_decorator_view support
  [maurits, jaroel]

4.3.3 (unreleased)
------------------

- Added a method toLocalizedString to @@plone view,
  on the model of toLocalizedTime,
  to get a localized string rendering a size from an integer.
  Use it on image view.
  [thomasdesvenain]

- Move propertysheet imaging_properties and the corresponding
  utilities from plone.app.imaging to Products.CMFPlone.
  https://github.com/plone/plone.app.contenttypes/issues/82
  [pbauer]

- Ensure ``object_rename`` script has ``_`` message factory available
  to prevent error when unauthorized.
  [davidjb]

- Fix issue with the search js in sharing page where the user needed to check
  twice a checkbox to assign a role after a search.
  [vincentfretin]

- Catch missing userid on mail_password form, and treat is as
  an empty userid. That way the user gets a helpful message.
  [do3cc]

- Fixed item.body call in search-rss.pt so now works even when
  item.body is an AcquisitionWrapper.
  [alecghica]

4.3.2 (unreleased)
------------------

- Applied security fixes from PloneHotfix20130618:

  - Protected methods on the ZCatalog.
  - Added missing module security declarations.
  - Sanitize url in isURLInPortal.
  - Check 'Set own password' permission in mailPassword.
  - Prevent the Zope request from being traversed.
  - Protected sendto method.
  - Sanitize input to spamProtect script.

  [davisagli]

- Get ``portal_discussion`` properly with ``getToolByName``.
  [maurits]

- Fix dependency ordering problem with plone-final import step.
  [davisagli]

- remove bbb-kss.css from css registry registration
  [vangheem]
