@@ -48,7 +48,6 @@ setup(name='Products.CMFPlone',
           'slimit',
           'cssmin',
           'Products.CMFCore',
-          'Products.CMFDefault',
           'Products.CMFDiffTool',
           'Products.CMFDynamicViewFTI',
           'Products.CMFEditions',
